--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-assets-manifest": "^3.1.1"
   },
   "eslintConfig": {
     "root": true,
